fix footer horizontal scroll, add best nis logo

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,7 +32,7 @@ body, html {
 
 #footer {
   margin-top: 0;
-  padding: 10px 10px 10px 10px;
+  /*padding: 10px 10px 10px 10px;*/
   width: 100%;
   /*height: 288px;*/
   background: black;
@@ -144,5 +144,9 @@ a.social.twitter {
 
 .partner-logo {
   width: 224px;
-  margin: 50px 56px 50px 56px;
+  margin: 20px 56px 20px 56px;
+}
+
+.footer-container {
+    padding: 0 0 10px 0;
 }
